[이강산] - 공지사항 포스팅 기능 구현 - 공지사항 리스트 기능

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,16 +8,23 @@
 
 header {
 	height:40px;
+	background-color:purple;
 }
 
 
 footer {
 	height:50px;
+	background-color:purple;
 }
 
 #loginBox {
 	width:500px;
 	
+}
+
+.noticebox {
+	
+	width:500px;
 }
 
 
