[이강산] - 관리자 권한 적용 - 공지사항 기능 보완

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,13 +8,13 @@
 
 header {
 	height:40px;
-	background-color:purple;
+	background-color:#6A5ACD;
 }
 
 
 footer {
 	height:50px;
-	background-color:purple;
+	background-color:#6A5ACD;
 }
 
 #loginBox {
